--- a/Exam Assignments/Code/einspeed/CMakeLists.txt
+++ b/Exam Assignments/Code/einspeed/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.10)
 
 project(main VERSION 1.0 LANGUAGES CXX)
 
-include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/include)
+include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/external/hptt/include)
 add_subdirectory(src)
