including unit tests

--- a/Exam Assignments/Code/einspeed/Makefile
+++ b/Exam Assignments/Code/einspeed/Makefile
@@ -1,2 +1,4 @@
 all:
 	cd build && cmake .. && make && mv src/einspeed.so ../einspeed.so && python3 ../einspeed.py
+test:
+	cd build && cmake .. && cd tests && make && ./catch2
