--- a/Exam Assignments/Code/einspeed/CMakeLists.txt
+++ b/Exam Assignments/Code/einspeed/CMakeLists.txt
@@ -4,3 +4,4 @@ project(main VERSION 1.0 LANGUAGES CXX)
 
 include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/external/hptt/include)
 add_subdirectory(src)
+add_subdirectory(tests)
