--- a/Exam Assignments/Code/einspeed/src/CMakeLists.txt
+++ b/Exam Assignments/Code/einspeed/src/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.10)
 # Project name and version
 project(einspeed VERSION 1.0 LANGUAGES CXX)
 
+# Set compiler flags
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -march=native -ffast-math")
+
 # Find Python
 find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
 
