Writing Readme.txt for einspeed project

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,4 +1,4 @@
 all:
-	cd build && cmake .. && make && mv src/einspeed.so ../einspeed.so && python3 ../einspeed.py
+	cd build && cmake .. && make && mv src/einspeed.so ../einspeed.so
 test:
 	cd build && cmake .. && cd tests && make && ./catch2
