Removing CMakeCache.txt at make init

--- a/project/Makefile
+++ b/project/Makefile
@@ -3,4 +3,4 @@ all:
 test:
 	cd build && cmake .. && cd tests && make && ./catch2
 init:
-	cd external && git clone https://github.com/springer13/hptt && mv -f hptt_CMakeLists.txt hptt/CMakeLists.txt
+	cd external && git clone https://github.com/springer13/hptt && mv -f hptt_CMakeLists.txt hptt/CMakeLists.txt && cd ../build && rm -f CMakeCache.txt
